--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.openweather.rainingimageview_lib.MainActivity">
+    android:layout_height="match_parent">
 
     <com.openweather.rainingimageview.RainingImageView
         android:layout_width="match_parent"
@@ -14,4 +14,5 @@
 
     </com.openweather.rainingimageview.RainingImageView>
 
-</RelativeLayout>
+</LinearLayout>
+
